@@ -52,6 +52,7 @@ Fixes:
    unevaluated input. Reported by Ingwaz. [MG]
  * repeat() could write partial ANSI tags, causing buffer overflows. From a
    report by Ashen-Shugar. [MG]
+ * Compile fix for Win32. Reported by ChaosMageX. [MG]
 
 & 1.8.5p3
 Version 1.8.5 patchlevel 3                                 Aug 23, 2012
